fix responsive menu collapsing styles

--- a/scss/custom/components/_menus.scss
+++ b/scss/custom/components/_menus.scss
@@ -7,40 +7,31 @@
 %menu-toggle {
   display: none;
 
-  // prevent firefox from showing a dotted border
   &:focus { outline:none;}
 
-  @include media-query(palm) { display: inline-block;}
+  @include media-query(portable) { display: inline-block;}
 }
+.menu-toggle { @extend %menu-toggle;}
 
 /**
  * placeholder for menu container used to hide menus on mobile / tablet
  */
 %menu-container {
-  @include media-query(palm) { overflow: hidden;}
+  @include media-query(portable) { overflow: hidden;}
 }
 
   %menu {
     @extend %list_-reset;
+    display: inline-block;
 
-    /**
-     * animate menu for mobiles and tablets
-     */
-    @include media-query(palm) {
-      @include transition(all 250ms ease-in-out);
-      @include transform(translate3d(0,0,0));
-
-      %menu-container > & { max-height: 0;}
-
-      %menu-container.is-open > & { max-height: 50em;}
-    }
+    @include media-query(portable) { display: block;}
   }
 
     %menu__item {
       position: relative;
       display: inline-block;
 
-      @include media-query(palm) { display: block;}
+      @include media-query(portable) { display: block;}
 
       & > a {
         display: block;
@@ -61,6 +52,19 @@
           padding-bottom: 1em;
           opacity: 1;
         }
+
+        @include media-query(portable) {
+          // collapse all links on portable
+          @include menu-anchor-collapse();
+
+          // only show items when grandparent has .is-open-menu
+          .is-open-menu & {
+            max-height: 8em;
+            opacity: 1;
+            padding-top: .5em;
+            padding-bottom: .5em;
+          }
+        }
       }
 
       & %menu__sub a {
@@ -70,7 +74,7 @@
         // collapsed styles
         @include menu-anchor-collapse();
 
-        @include media-query(palm) {
+        @include media-query(portable) {
           white-space: normal;
           min-width: none;
           padding: 0 1.5em;
@@ -107,7 +111,7 @@
           overflow: visible;
         }
 
-        @include media-query(palm) {
+        @include media-query(portable) {
           display: block;
           position: relative;
           margin-left: 1.5em;
@@ -122,7 +126,7 @@
           top: 0;
           left: 100%;
 
-          @include media-query(palm) {
+          @include media-query(portable) {
             top: auto;
             left: auto;
           }
